test mobile card

--- a/mila_website/css/style.css
+++ b/mila_website/css/style.css
@@ -735,12 +735,12 @@ section.target div.content div.container {
   flex-wrap: wrap;
   justify-content: center;
 }
-section.target div.content div.container div.mycard {
+section.target div.content div.container .mycard {
   display: none;
   position: relative;
   margin: 5% 2%;
 }
-section.target div.content div.container div.mycard div.icon {
+section.target div.content div.container .mycard .icon {
   background: url('../assets/img/mila_train.jpg');
   background-position: center;
   background-size: cover;
@@ -751,7 +751,7 @@ section.target div.content div.container div.mycard div.icon {
   top: 0;
   width: 100%;
 }
-section.target div.content div.container div.mycard div.icon .fa {
+section.target div.content div.container .mycard .icon .fa {
   color: #ffffff;
   font-size: 80px;
   left: 50%;
@@ -759,19 +759,19 @@ section.target div.content div.container div.mycard div.icon .fa {
   top: 50%;
   transform: translate(-50%, -50%);
 }
-section.target div.content div.container div.mycard div.icon video {
+section.target div.content div.container .mycard .icon video {
   position: absolute;
   bottom: 0;
   right: 0;
   width: 40%;
   height: auto;
 }
-section.target div.content div.container div.mycard div.slide {
+section.target div.content div.container .mycard .slide {
   height: 300px;
   transition: 0.5s;
   width: 500px;
 }
-section.target div.content div.container div.mycard div.slide.slide1 {
+section.target div.content div.container .mycard .slide.slide1 {
   align-items: center;
   display: flex;
   justify-content: center;
@@ -780,7 +780,7 @@ section.target div.content div.container div.mycard div.slide.slide1 {
   transition: 0.7s;
   z-index: 1;
 }
-section.target div.content div.container div.mycard div.slide.slide1 .content .titre {
+section.target div.content div.container .mycard .slide.slide1 .content .titre {
   padding: 2% 0%;
   position: absolute;
   left: 0;
@@ -788,23 +788,13 @@ section.target div.content div.container div.mycard div.slide.slide1 .content .t
   width: 100%;
   background-color: #181818;
 }
-section.target div.content div.container div.mycard div.slide.slide1 .content .titre p {
+section.target div.content div.container .mycard .slide.slide1 .content .titre p {
   color: white;
   text-transform: uppercase;
   text-align: center;
 }
-section.target div.content div.container div.mycard div.slide1:after {
-  background: #181818;
-  bottom: 15px;
-  content: "";
-  height: 4px;
-  left: 50%;
-  position: absolute;
-  transform: translateX(-50%);
-  width: 30px;
-}
-section.target div.content div.container div.mycard div.slide,
-section.target div.content div.container div.mycard div.slide2 {
+section.target div.content div.container .mycard .slide,
+section.target div.content div.container .mycard .slide2 {
   align-items: center;
   box-shadow: -1px -2px 40px rgba(0, 0, 0, 0.4);
   box-sizing: border-box;
@@ -815,82 +805,82 @@ section.target div.content div.container div.mycard div.slide2 {
   transform: translateY(-100px);
   transition: 0.8s;
 }
-section.target div.content div.container div.mycard div.slide div.content,
-section.target div.content div.container div.mycard div.slide2 div.content {
+section.target div.content div.container .mycard .slide .content,
+section.target div.content div.container .mycard .slide2 .content {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
 }
-section.target div.content div.container div.mycard div.slide div.content p,
-section.target div.content div.container div.mycard div.slide2 div.content p {
+section.target div.content div.container .mycard .slide .content p,
+section.target div.content div.container .mycard .slide2 .content p {
   color: #181818;
   margin: 0;
   padding: 0;
 }
-section.target div.content div.container div.mycard:nth-of-type(2) .icon {
+section.target div.content div.container .mycard:nth-of-type(2) .icon {
   background: url('../assets/img/casino.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
-section.target div.content div.container div.mycard:nth-of-type(3) .icon {
+section.target div.content div.container .mycard:nth-of-type(3) .icon {
   background: url('../assets/img/musee.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
-section.target div.content div.container div.mycard:nth-of-type(4) .icon {
+section.target div.content div.container .mycard:nth-of-type(4) .icon {
   background: url('../assets/img/mila_centres.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
-section.target div.content div.container div.mycard:nth-of-type(5) .icon {
+section.target div.content div.container .mycard:nth-of-type(5) .icon {
   background: url('../assets/img/pdv.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
-section.target div.content div.container div.mycard.active {
-  display: none;
+section.target div.content div.container .mycard.active {
+  display: block;
 }
-section.target div.content div.container div.mycard.active .icon {
+section.target div.content div.container .mycard.active .icon {
   transition: 0.7s;
   background: url('../assets/img/mila_trainhover.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
-section.target div.content div.container div.mycard.active .slide.slide1 {
+section.target div.content div.container .mycard.active .slide.slide1 {
   transform: translateY(0px);
 }
-section.target div.content div.container div.mycard.active .slide.slide2 {
+section.target div.content div.container .mycard.active .slide.slide2 {
   transform: translateY(0);
 }
-section.target div.content div.container div.mycard.active:nth-of-type(2) .icon {
+section.target div.content div.container .mycard.active:nth-of-type(2) .icon {
   transition: 0.7s;
   background: url('../assets/img/casinohover.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
-section.target div.content div.container div.mycard.active:nth-of-type(3) .icon {
+section.target div.content div.container .mycard.active:nth-of-type(3) .icon {
   transition: 0.7s;
   background: url('../assets/img/museehov.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
-section.target div.content div.container div.mycard.active:nth-of-type(4) .icon {
+section.target div.content div.container .mycard.active:nth-of-type(4) .icon {
   transition: 0.7s;
   background: url('../assets/img/mila_centreshover2.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
-section.target div.content div.container div.mycard.active:nth-of-type(5) .icon {
+section.target div.content div.container .mycard.active:nth-of-type(5) .icon {
   transition: 0.7s;
   background: url('../assets/img/pdvhover.jpg');
   background-position: center;
