--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -2610,7 +2610,7 @@ footer {
         padding-top: 15% !important;
 
         div.mycard.active {
-          margin-bottom: 15% !important;
+          // margin-bottom: 15% !important;
         }
       }
     }
@@ -2965,7 +2965,7 @@ footer {
         padding-top: 20% !important;
 
         div.mycard.active {
-          margin-bottom: 20% !important;
+          // margin-bottom: 20% !important;
         }
       }
 
