--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -919,7 +919,7 @@ section.target {
       .mycard {
         display: none;
         position: relative;
-        margin: 5% 2%;
+        padding: 5% 0%;
     
         .icon {
             background: url('../assets/img/mila_train.jpg');
@@ -3513,7 +3513,7 @@ footer {
         }
 
         div.mycard {
-          margin: 0% 2%;
+          padding: 5% 0%;
           display: block;
 
           div.slide1 {
@@ -3528,7 +3528,6 @@ footer {
 
         div.mycard.active {
           display: block;
-          margin-bottom: 8%;
 
           .slide2 {
             opacity: 1;
