--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -1057,6 +1057,7 @@ section.target {
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
+            filter: none;
         }
     
         .slide.slide1 {
