--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -3509,6 +3509,7 @@ footer {
 
       div.container {
         padding-top: 5%;
+        justify-content: space-evenly;
 
         article.card {
           display: none;
@@ -3520,6 +3521,17 @@ footer {
 
           div.slide1 {
             transform: none !important;
+            div.content{
+              div.icon{
+                img{
+                  bottom: 0;
+                  right: 0;
+                  position: absolute;
+                  width: 40%;
+                  height: auto;
+                }
+              }
+            }
           }
 
           div.slide2 {
