--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -932,15 +932,6 @@ section.target {
             top: 0;
             width: 100%;
     
-            .fa {
-                color: #ffffff;
-                font-size: 80px;
-                left: 50%;
-                position: absolute;
-                top: 50%;
-                transform: translate(-50%, -50%);
-            }
-    
             video {
                 position: absolute;
                 bottom: 0;
@@ -1052,7 +1043,7 @@ section.target {
         padding: 10% 0%;
     
         .icon {
-            transition: 0.7s;
+            transition: background .2s ease;
             background: url('../assets/img/mila_trainhover.jpg');
             background-position: center;
             background-size: cover;
@@ -1070,7 +1061,7 @@ section.target {
     
         &:nth-of-type(2) {
             .icon {
-                transition: 0.7s;
+                transition: background .2s ease;
                 background: url('../assets/img/casinohover.jpg');
                 background-position: center;
                 background-size: cover;
@@ -1080,7 +1071,7 @@ section.target {
     
         &:nth-of-type(3) {
             .icon {
-                transition: 0.7s;
+              transition: background .2s ease;
                 background: url('../assets/img/museehov.jpg');
                 background-position: center;
                 background-size: cover;
@@ -1090,7 +1081,7 @@ section.target {
     
         &:nth-of-type(4) {
             .icon {
-                transition: 0.7s;
+                transition: background .2s ease;
                 background: url('../assets/img/mila_centreshover2.jpg');
                 background-position: center;
                 background-size: cover;
@@ -1100,7 +1091,7 @@ section.target {
     
         &:nth-of-type(5) {
             .icon {
-                transition: 0.7s;
+                transition: background .2s ease;
                 background: url('../assets/img/pdvhover.jpg');
                 background-position: center;
                 background-size: cover;
