--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -610,6 +610,8 @@ section.innovation {
       align-items: center;
 
       div {
+        width: 100%;
+        text-align: center;
         p {
           font-family: 'krub', sans-serif;
           font-weight: @bold;
