--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -1070,6 +1070,7 @@ section.fonctions {
     display: flex;
     width: 75%;
     padding: 5% 0%;
+    overflow-x: hidden;
 
     .left {
       width: 50%;
@@ -1226,6 +1227,7 @@ section.video {
     justify-content: center;
     align-items: center;
     position: relative;
+    overflow: hidden;
 
     .txt {
       position: absolute;
@@ -1271,7 +1273,7 @@ section.video {
 
     div.container {
       display: flex;
-      width: 65%;
+      width: 50%;
       justify-content: center;
       position: relative;
 
@@ -1323,6 +1325,7 @@ section.demo {
     width: 85%;
     justify-content: space-around;
     align-items: center;
+    overflow-x: hidden;
 
     .left {
       width: 50%;
