--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -112,6 +112,27 @@ a {
 
 /* ------------------------------- RECURRENT -- */
 
+body.no-scroll{
+    overflow: hidden;
+}
+
+div.loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+/* Masquer le loader après chargement */
+div.loader.hidden {
+  display: none;
+}
 
 .btnt {
   visibility: hidden;
