--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -127,6 +127,10 @@ div.loader {
   justify-content: center;
   align-items: center;
   z-index: 9999;
+  video{
+    width: 60%;
+    height: auto;
+  }
 }
 
 div.loader.hidden {
