--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -1493,6 +1493,7 @@ footer {
           color: white;
           text-align: end;
           margin: 0;
+
         }
       }
 
@@ -1613,7 +1614,12 @@ footer {
       text-align: center;
       flex: 1;
       color: white;
-
+      a{
+        color: white;
+        &:hover{
+          color: @luxant;
+        }
+      }
       i {
         margin: 0 2%;
       }
